# ComfyUI-ScenarioPrompt

./: README.ko.md  README.md  __init__.py  pyproject.toml  s_prompt.py  test.py
.github/workflows/: publish.yml
Util/: tagCollector.py  tagCollector2.py
data/: Lighting_prompt.json  NovelAI - 태그[동작 1].json  NovelAI - 태그[동작 2].json  NovelAI - 태그[시점].json  NovelAI - 태그[외모].json  NovelAI - 태그[의상].json  NovelAI - 태그[인물].json  NovelAI - 태그[장소].json  NovelAI - 태그[장신구].json  NovelAI - 태그[체형].json  NovelAI - 태그[행동].json  template.json
data/csv/: NovelAI - 태그[기본].csv  NovelAI - 태그[동작 1].csv  NovelAI - 태그[동작 2].csv  NovelAI - 태그[외모].csv  NovelAI - 태그[의상].csv  NovelAI - 태그[인물].csv  NovelAI - 태그[장신구].csv  NovelAI - 태그[체형].csv  NovelAI - 태그[행동].csv
store/: template.json
web/js/: autocomplete.js  autocompleteTest.js  web.js
